Added initial support for Java 11